feat: 实现运营存储区域
